--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: postgres:15
     container_name: todo-store
     env_file:
-      - ../../.env
+      - ../.env
     ports:
       - "5432:5432"
     volumes:
